demo1/src/main/kotlin/com/example/demo/global/error/CustomException.kt
package com.example.demo.global.error

abstract class CustomException (
    val errorProperty: CustomErrorProperty
): RuntimeException() {
    override fun fillInStackTrace() = this
}